@@ -22,10 +22,11 @@
 #define ARP_TABLE_ENTRY_LEN 20
 #define ARP_TABLE_ENTRY_TIMEOUT 43200
 #define ROUTE_CMD_LEN 255
-#define SLEEPTIME 1
+#define SLEEPTIME 100000 /* 100 ms */
+#define REFRESHTIME 50 /* 50 sec */
 #define MAX_IFACES 10
 
-#define VERSION "0.31"
+#define VERSION "0.4"
 
 #include <errno.h>
 #include <fcntl.h>
@@ -57,10 +58,13 @@ typedef struct arptab_entry {
 } ARPTAB_ENTRY;
 
 extern int debug;
-extern ARPTAB_ENTRY **arptab;
+extern int option_arpperm;
 
-extern void *arp(void *ifname);
+extern ARPTAB_ENTRY **arptab;
 extern pthread_mutex_t arptab_mutex;
 
 extern char * ifaces[MAX_IFACES+2];
 extern int last_iface_idx;
+
+extern void *arp(void *ifname);
+extern void refresharp(ARPTAB_ENTRY *list);
